Corrected(Centered) alignment of Connect button in Main Component

--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -21,7 +21,7 @@
 .main-data-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
 }
 
 .header {
